corrected CSS stylings for Blog, desktop version. starting m-queries at 980px for blog.html

--- a/blog.html
+++ b/blog.html
@@ -42,16 +42,16 @@
 
     <section class="mainBody">
         <!-- div with flex -->
-        <div class="blogFlex">
+        <div class="blogFlex wrapper">
 
             <!-- contains aside content -->
             <aside class="blogAside">
                 <div class="aside1">
                     <div class="asideImg">
-                        <img src="assets/blog-image-2.jpg" alt="Image of a young femme appearing person with their eyes closed laying on pale-grey-blue carpet, near where it meets a sky-blue sponge painted wall. Their hair is splayed, and their right arm is poised curved with their palm facing their head. Their left bent at the elbow and lightly touching the left side of their head, as though embracing the air.">
+                        <img class="blogAsideImg" src="assets/blog-image-2.jpg" alt="Image of a young femme appearing person with their eyes closed laying on pale-grey-blue carpet, near where it meets a sky-blue sponge painted wall. Their hair is splayed, and their right arm is poised curved with their palm facing their head. Their left bent at the elbow and lightly touching the left side of their head, as though embracing the air.">
                     </div>
                 
-                    <div>
+                    <div class="aside1Text">
                         <h3>About Harper</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, beatae! <a href="#">Find out more.</a></p>
                     </div>
@@ -60,10 +60,10 @@
                 <div class="aside2">
                     <h3>Recent Posts</h3>
                     <ul>
-                        <li><p> • Lorem ipsum dolor sit amet.</p></li>
-                        <li><p> • Lorem ipsum dolor sit amet.</p></li>
-                        <li><p> • Lorem ipsum dolor sit amet.</p></li>
-                        <li><p> • Lorem ipsum dolor sit amet.</p></li>
+                        <li><p>Lorem ipsum dolor sit amet.</p></li>
+                        <li><p>Lorem ipsum dolor sit amet.</p></li>
+                        <li><p>Lorem ipsum dolor sit amet.</p></li>
+                        <li><p>Lorem ipsum dolor sit amet.</p></li>
                     </ul>
                 </div>
             </aside>
@@ -116,9 +116,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, non corporis voluptatem ratione ab ut officiis neque maxime amet sint hic earum laborum expedita unde quis? Minus tempore vel natus atque expedita est fuga error, reiciendis accusantium recusandae. Quasi repellat, quo consequatur quod velit eligendi vero tempore labore repudiandae aliquam.</p>
                             </div>
                     </div>
-                </section>
 
-                <section>
                     <form class="commentform">
 
                             <!-- 2x Input for name and email address -->
