Completed responsiveness at 980px, blog.html.

--- a/blog.html
+++ b/blog.html
@@ -40,9 +40,9 @@
         <h1>Blog</h1>
     </Header>
 
-    <section class="mainBody">
+    <section class="mainBody wrapper">
         <!-- div with flex -->
-        <div class="blogFlex wrapper">
+        <div class="blogFlex">
 
             <!-- contains aside content -->
             <aside class="blogAside">
@@ -68,7 +68,7 @@
                 </div>
             </aside>
 
-            <!--  -->
+            <!-- Section for main section of blog -->
             <main class="blogMain">
                 <div class="blogBox">
                     <h4>My Favourite Travel Destinations</h4>
