--- a/contact.html
+++ b/contact.html
@@ -24,17 +24,32 @@
 
 <body>
     <Header class="otherHeader2">
-        <div class="navBar">
-            <nav>
-                <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="index.html#About">about</a></li>
-                    <li><Span>
-                            <h2>Harper</h2>
-                        </Span></li>
-                    <li><a href="./blog.html">blog</a></li>
-                    <li><a href="#"><span class="whiteActive">contact</span></a></li>
-                </ul>
+        <div class="navBar wrapper">
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <!--
+                    A hidden checkbox is used as click reciever,
+                    so you can use the :checked selector on it.
+                    -->
+                    <input type="checkbox">
+            
+                    <!--
+                    Some spans to act as a hamburger.
+                    -->
+                    <span></span>
+                    <span></span>
+                    <span></span>
+            
+                    <ul id="menu">
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="#About">about</a></li>
+                        <li>
+                            <h2 class="headerH2">Harper</h2>
+                        </li>
+                        <li><a href="blog.html">blog</a></li>
+                        <li><a class="whiteActive" href="contact.html">contact</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
         <h1>Contact</h1>
