Added favicon, converted contact page at 950px which will continue to size down without need for further changes. Added skip link.

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Link favicon -->
+    <link rel="icon" href="./assets/favicon.ico" type="image/gif">
 
     <!-- Kit from Font Awesome -->
     <script src="https://kit.fontawesome.com/dfdc9c622d.js" crossorigin="anonymous"></script>
@@ -21,6 +23,9 @@
     <title>Harper's Blog</title>
 </head>
 <body>
+    <!-- insert accessibility skip link -->
+    <a href="#blogMain" class="skip-link">Skip to main content</a>
+
     <Header class="otherHeader">
         <div class="navBar wrapper">
             <nav role="navigation">
@@ -146,7 +151,7 @@
                             <input type="text" placeholder="&nbsp;Name" required="true" id="name" class="idField">
 
                             <label for="email" class="visually-hidden">Email:</label>
-                            <input type="email" placeholder="&nbsp;Email address" required="true" id="email" class="idField">
+                            <input type="email" placeholder="&nbsp;Email address" required="true" id="email" class="idField2">
 
 
                             <!-- large textbox input for comment -->
