index.html header responsiveness conversion completed.

--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
         
             <div class="headerFlex">
                 <div class="headerFlexContainer">
-                    <div class="headerimg">
+
+                    <div class="headerImg">
                         <img  src="./assets/home-image-1.jpg" alt="Image of a young femme appearing person sucken into a bed of pale pink and blue balloons.">
                     </div>
+
                     <h1>Harper</h1>
                     <div class="headerCircle">
                         <img src="assets/circle-text.png"  alt="circular text reading: Everyday life with">
                     </div>
+
                 </div>
             </div>
         </div>
