corrected margin on icons in the aside quadrant section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="iconparent wrapper">
                 <div class="flexIconParent">
 
-                    <div class="flexIcon item1">
+                    <div class="flexIcon">
                         <div class="iconborder">
                             <i class="fas fa-image"></i>
                         </div>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
 
-                    <div class="flexIcon item2">
+                    <div class="flexIcon">
                         <div class="iconborder">
                             <i class="fas fa-user-alt"></i>
                         </div>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="flexIconParent">
-                    <div class="flexIcon item3">
+                    <div class="flexIcon">
                         <div class="iconborder">
                         <i class="fas fa-desktop"></i>
                         </div>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
 
-                    <div class="flexIcon item4">
+                    <div class="flexIcon">
                         <div class="iconborder">
                             <i class="fas fa-phone"></i>
                         </div>
