added responsiveness to index.html blog, about, aside, and gallery.

--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
 
         <section class="gallery wrapper">
             <div class="galleryParent">
-                <div class="imgHouse">
+                <div class="imgHouse img1">
                     <img src="assets/home-image-6.jpg" alt="Angled image of a pale pink mid-rise building and it's white window frames against a pale blue sky">
                 </div>
 
-                <div class="imgHouse">
+                <div class="imgHouse img2">
                     <img src="assets/home-image-7.jpg" alt="Image of a rose pink and dusky blue cloudly sky.">
                 </div>
 
-                <div class="imgHouse">
+                <div class="imgHouse img3">
                     <img src="assets/home-image-8.jpg" alt="image of a bright pink coloured swirl against a pale blue backdrop.">
                 </div>
             </div>
