fixed gallery responsiveness

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="textWidth">
                 <h2>Harper's Journey</h2>
                 <p class= "pMargin">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, aspernatur sapiente aliquid earum praesentium rerum, adipisci id voluptas optio ullam ratione, nobis doloremque. Voluptatem tempore ut accusantium fugiat pariatur ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                <button type="submit">Find out more</button>
+                <button class="minButton" type="submit">Find out more</button>
             </div>
         </section>
 
