responsive corrections on index.html complete.

--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,14 @@
     <!-- Link favicon -->
     <link rel="icon" href="./assets/favicon.ico" type="image/gif">
 
+    <!-- link in animation.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
     <!-- Kit from Font Awesome -->
     <script src="https://kit.fontawesome.com/dfdc9c622d.js" crossorigin="anonymous"></script>
 
     <!-- Google Font Script -->
     <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald:400,700&display=swap" rel="stylesheet">
-    <!-- 
-                font-family: 'Cabin', sans-serif;
-                font-family: 'Oswald', sans-serif;
-            -->
 
     <!-- link style sheet -->
     <link rel="stylesheet" type="text/css" href="./styles/sass/styles.css">
