--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <!-- Link favicon -->
         <link rel="icon" href="./assets/favicon.ico" type="image/gif">
 
+        <!-- link in animation.css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
         <!-- Kit from Font Awesome -->
         <script src="https://kit.fontawesome.com/dfdc9c622d.js" crossorigin="anonymous"></script>
     
