--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,8 @@
     <!-- Google Font Script -->
     <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald:400,700&display=swap" rel="stylesheet">
 
-    <!-- link to animate.css -->
-    <link rel="stylesheet" href="animate.min.css">
+    <!-- link in animation.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
     <!-- link style sheet -->
     <link rel="stylesheet" type="text/css" href="./styles/sass/styles.css">
@@ -63,8 +63,10 @@
         <div class="blogFlex">
             <div class="asideBar">
                 <!-- Dropdown button for aside content -->
-                <label for="toggle" class="asideButton">
+                <label for="toggle" class="asideButton animated slideInLeft">
+                    <button class="asideButton2">
                     <h4><i class="fas fa-angle-right"></i></h4>
+                    </button>
                 </label>
                 <input type="checkbox" id="toggle" name="toggle">
 
