added a top button to bring view back to top of the page.

--- a/blog.html
+++ b/blog.html
@@ -64,9 +64,7 @@
             <div class="asideBar">
                 <!-- Dropdown button for aside content -->
                 <label for="toggle" class="asideButton animated slideInLeft">
-                    <button class="asideButton2">
                     <h4><i class="fas fa-angle-right"></i></h4>
-                    </button>
                 </label>
                 <input type="checkbox" id="toggle" name="toggle">
 
@@ -165,6 +163,11 @@
             </main>
         </div>
     </section>
+
+    <!-- add fixed "button" to take user to top  -->
+    <div class="top">
+        <a href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
+    </div>
 
     <footer>
         <p>Copyright © 2018 HackerYou</p>
