--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <div>Skip to main content</div>
     </a>
 
+    <!-- add fixed "button" to take user to top  -->
+    <a href="#" class="top animated infinite flash slower"><i class="far fa-arrow-alt-circle-up"></i></a>
+    
+
     <Header>
         <div class="wrapper">
             <nav role="navigation">
@@ -194,6 +198,7 @@
         </section>
     </main>
 
+    
     <footer>
         <p>Copyright © 2018 HackerYou</p>
     </footer>
