--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <!-- skip link for accessibility -->
     <a href="#contact" class="skip-link">
         <div>Skip to Contact Form</div>
     </a>
