--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Harper</title>
 </head>
 <body>
-    
+    <!-- skip link for accessibility -->
     <a href="#main" class="skip-link">
         <div>Skip to main content</div>
     </a>
